# ETL-GIS-Files

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app_data/input/boundaries/: mr.json  mr_test.json
app_data/input/config/: gdal_settings.local.toml  settings.local.toml
src/etl_gis_files/: main.py
src/etl_gis_files/config/: .dbsettings.toml  config.py  gdal_settings.toml  loader.py  settings.toml
src/etl_gis_files/config/models/: common.py  db.py  dirs_files.py
src/etl_gis_files/services/: db_subprocesses.py  dirs_files.py  gdal_algs.py
